@@ -41,6 +41,12 @@ B::~B()
   b2 = 902;
 }
 
+struct C : public B
+{
+  A *c1;
+  A *c2;
+};
+
 // Stop the compiler from optimizing away data.
 void refer (A *)
 {
@@ -57,16 +63,19 @@ void refer (empty *)
 
 int main (void)
 {
-  A alpha, *aap, *abp;
+  A alpha, *aap, *abp, *acp;
   B beta, *bbp;
+  C gamma;
   empty e;
 
   alpha.a1 = 100;
   beta.a1 = 200; beta.b1 = 201; beta.b2 = 202;
+  gamma.c1 = 0; gamma.c2 = (A *) ~0UL;
 
   aap = &alpha; refer (aap);
   abp = &beta;  refer (abp);
   bbp = &beta;  refer (bbp);
+  acp = &gamma; refer (acp);
   refer (&e);
 
   return 0;  // marker return 0
